--- a/python_backend/requirements.txt
+++ b/python_backend/requirements.txt
@@ -4,3 +4,7 @@ python-dotenv==1.0.1
 pytz
 numpy==1.26.4
 notebook==7.1.3
+pandas==2.2.2
+scikit-learn==1.4.2
+SQLAlchemy==2.0.30
+mysql-connector-python==8.3.0
