--- a/python_backend/Dockerfile
+++ b/python_backend/Dockerfile
@@ -3,7 +3,7 @@ FROM public.ecr.aws/docker/library/python:3.9
 COPY . /python_backend
 WORKDIR /python_backend
 
-SHELL ["/bin/bash", "-c"]
+# SHELL ["/bin/bash", "-c"]
 RUN apt-get update &
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
